# crafting_interpreters

./: CMakeLists.txt  README.md  build.bat  build_normal.bat  lox.txt  main.c
crap/: Playground.c  binary_tree.c  hello.c  helpers.h  learn_visitor.c  linked_list.c  nested_functions.c  nocrt.c  test_ast_printer.c
extra/: Arrays.c  Arrays.h  Interfaces.h  Map.c  Map.h  Memory.c  Memory.h  Stack.c  Stack.h  Windows.c  Windows.h
lox/: AstPrinter.c  AstPrinter.h  Callable.c  Callable.h  Class.c  Class.h  Enumerable.h  Environment.c  Environment.h  Expr.c  Expr.h  Function.c  Function.h  Interpreter.c  Interpreter.h  Object.c  Object.h  Parser.c  Parser.h  Resolver.c  Resolver.h  Scanner.c  Scanner.h  Stmt.c  Stmt.h  Token.c  Token.h  ast_interpreter.c  ast_interpreter.h
lox2/: environment.c  environment.h  expr.c  expr.h  interpreter.c  interpreter.h  list.h  lox_main.c  object.h  parser.c  parser.h  resolver.c  resolver.h  scanner.c  scanner.h  stmt.c  stmt.h  test_scanner.h  token.h  value.h
lox2/source/: main.lox
lox2/tests/: test_main.c
lox2/tests/map/: map2.c  map2.h  test_map.c
lox2/tests/parser/: test_parser.c
lox2/tests/resolver/: test_resolver.c
lox2/tests/scanner/: test_scanner.c
lox2/utils/: map.c  map.h  stack.c  stack.h
my-app/src/main/java/com/mycompany/app/: App.java
my_renderer/: build.bat  ideas.md  server.py
my_renderer/code/include/: asset_manager.h  bind_groups.h  buffer_manager.h  gpu.h  pipeline_manager.h  renderer.h  shader_manager.h  utils.h
my_renderer/code/include/types/primitives/: float3.h
my_renderer/code/src/: asset_manager.c  bind_groups.c  buffer_manager.c  gpu.c  pipeline_manager.c  renderer.c  shader_manager.c  utils.c
my_renderer/demo/: index.data  index.html  index.js  index.wasm  main.c  shader.wgsl  template.html
my_renderer/demo2/: index.data  index.html  index.js  index.wasm  index.wasm.map  main.c  template.html  ugh.c
my_renderer/demo3/: index.html  index.js  index.wasm  loader_test.c  main.c  shader.wgsl  template.html  tinyobj_loader_c.h
my_renderer/demo4/: index.js  index.wasm  main.c
tools/: GenerateAst.c  generate_ast_v2.c  generate_ast_v2.h
